--- a/.gitignore
+++ b/.gitignore
@@ -18,10 +18,9 @@
 
 .byebug_history
 
-# Ignore application configuration
-/config/secrets.yml
-
 package.json
 .rspec
 Gemfile.lock
 
+# Ignore application configuration
+/config/application.yml
